[project]
name = "documentation-assitant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain==0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "ollama>=0.6.1",
    "pinecone>=7.3.0",
    "streamlit>=1.51.0",
]
